--- a/src/styles/Desktop.scss
+++ b/src/styles/Desktop.scss
@@ -24,7 +24,7 @@
 
 
         .topBar{
-            padding: 3%;
+            padding: 2%;
 
 
             .icon{
@@ -32,13 +32,14 @@
             }
         }
 
+
         .nav{
             display: flex;
             flex-direction: row;
             justify-content: space-around;
             margin-left: 0;
             background-color: #fff;
-            padding: 3%;
+            padding: 1%;
             
 
         }
@@ -103,7 +104,7 @@
                 .profileImage{
                     margin-bottom: 10%;
                     width: 100%;
-                    padding-top: 100%;
+                    // padding-top: 100%;
                 }
 
                 .details{
@@ -210,7 +211,7 @@
     }
 
     .heading{
-        font-size: 5vw;
+        font-size: 4vw;
         margin-bottom: 7.5%;
         h1{
             font-size: 5vw;
@@ -269,6 +270,14 @@
                 }
             }
         }
+        .socials{
+            font-size: 3rem;
+        }
+        .contactSub{
+            font-size: 2vw; 
+        }
+
+
     }
 
     .designPage{
