--- a/src/styles/Tablet.scss
+++ b/src/styles/Tablet.scss
@@ -49,29 +49,46 @@
 
     }
 
+    #navbarA{
+        .topBar{
+            .icon{
+                #heart{
+                    font-size: 3rem;
+                }
+            }
+            
+        }
+    }
+
     // about : ---------------------------------------------------------
     .aboutPage{
 
         .logoHeading{
-            font-size: 7.72vw;
-            padding-bottom: 10%;
+            padding-bottom: 5%;
+
+            a{
+            font-size:10vw;
+
+            }
         }
 
         .aboutTopSection{
 
             .imageAndDetails{
 
-                padding-bottom: 10%;
+                padding-bottom: 5%;
+
+
 
 
                 .details{
                     width: 40%;
                     background-color: transparent;
-                    border: 3px solid $green;
+                    // border: 3px solid $green;
                     // border-radius: 10px;
 
                     div{
-                        font-size: 3vw;
+                        font-size: 2rem;
                         color: $green;
                         font-weight: 600;
 
@@ -203,6 +220,10 @@
                     font-size: 1.75rem;
                 }
             }
+        }
+
+        .contactSub{
+            font-size: 3vw;
         }
 
 
