--- a/src/styles/Desktop.scss
+++ b/src/styles/Desktop.scss
@@ -225,6 +225,13 @@
             font-size: 5vw;
             margin-bottom: 7.5%;
         }
+
+        #toggleProjects{
+
+            .asleep, .active{
+                font-size: 1.75rem;
+            }
+        }
         
 
 
