--- a/src/styles/Styles.css
+++ b/src/styles/Styles.css
@@ -209,6 +209,7 @@
       -ms-flex-align: center;
           align-items: center;
   font-size: 4.25vw;
+  border: 2px solid #2FCAB0;
   border-radius: 3px;
 }
 
@@ -417,6 +418,49 @@
   margin: 0 auto;
 }
 
+.projectsPage #toggleProjects {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+}
+
+.projectsPage #toggleProjects .asleep, .projectsPage #toggleProjects .active {
+  border: none;
+  padding: 2% 8%;
+  cursor: pointer;
+  font-size: 1.25rem;
+  font-weight: 200;
+  margin-bottom: 5%;
+}
+
+.projectsPage #toggleProjects .asleep {
+  color: #2FCAB0;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.projectsPage #toggleProjects .asleep:hover {
+  color: black;
+  background-color: white;
+}
+
+.projectsPage #toggleProjects .active {
+  color: white;
+  background-color: rgba(47, 202, 176, 0.8);
+}
+
+.projectsPage #toggleProjects .active:hover {
+  color: black;
+  background-color: white;
+}
+
 .projectsPage .heading {
   text-align: center;
   font-weight: 800;
@@ -426,6 +470,7 @@
 }
 
 .projectsPage .reactProjects {
+  padding-top: 5%;
   margin-bottom: 5%;
 }
 
