--- a/src/styles/Styles.scss
+++ b/src/styles/Styles.scss
@@ -209,7 +209,7 @@
                 justify-content: center;
                 align-items: center;
                 font-size: 4.25vw;
-                // border: 2px solid $green;
+                border: 2px solid $green;
                 border-radius: 3px;
                 
 
@@ -428,6 +428,46 @@
     width: 75%;
     margin: 0 auto;
 
+    #toggleProjects{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+
+        
+        .asleep, .active {
+            border: none;
+            padding: 2% 8%;;
+            cursor: pointer;
+            font-size: 1.25rem;
+            font-weight: 200;
+            margin-bottom: 5%;
+        }
+
+        .asleep {
+            color: $green;
+                background-color: rgba(0, 0, 0, 0.1);
+
+            &:hover{
+                color: black;
+                background-color: white;
+
+            }
+
+        }
+
+        .active{
+            color: white;
+            background-color: rgba(47, 202, 176, 0.80);
+            &:hover{
+                color: black;
+                background-color: white;
+                // background-color: rgba(47, 202, 176, 0.80);
+            }
+        }
+    }
+
+
     .heading{
         text-align: center;
         font-weight: 800;
@@ -439,6 +479,8 @@
     }
 
     .reactProjects{
+        padding-top: 5%;
+
         a{
             text-decoration: none;
             background-color: $green;
