--- a/src/styles/Desktop.css
+++ b/src/styles/Desktop.css
@@ -223,7 +223,7 @@
   }
   .heading {
     font-size: 4vw;
-    margin-bottom: 7.5%;
+    margin: 0;
   }
   .heading h1 {
     font-size: 5vw;
@@ -232,11 +232,12 @@
     max-width: 65%;
   }
   .projectsPage .heading {
-    font-size: 5vw;
-    margin-bottom: 7.5%;
+    font-size: 3vw;
+    margin-bottom: 3%;
   }
   .projectsPage #toggleProjects .asleep, .projectsPage #toggleProjects .active {
-    font-size: 1.75rem;
+    font-size: 1rem;
+    padding: 1% 3%;
   }
   .projectsPage .projectGallery {
     margin-bottom: 5%;
