--- a/src/styles/Desktop.scss
+++ b/src/styles/Desktop.scss
@@ -15,13 +15,12 @@
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
 
+
+    // NAV --------------------------------
     #navbarA{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-
-
-
 
         .topBar{
             padding: 2%;
@@ -44,6 +43,8 @@
 
         }
     }
+
+    // HOME ----------------
 
     #homePage{
 
@@ -82,6 +83,7 @@
         }
     }
 
+    // ABOUT -----------
     .aboutPage{
         .logoHeading{
             padding-bottom: 5%;
@@ -212,24 +214,28 @@
 
     .heading{
         font-size: 4vw;
-        margin-bottom: 7.5%;
+        // margin-bottom: 7.5%;
+        margin: 0;
         h1{
             font-size: 5vw;
         }
     }
 
+    // PROJECTS ---------------------
+
     .projectsPage{
         max-width: 65%;
 
         .heading{
-            font-size: 5vw;
-            margin-bottom: 7.5%;
+            font-size: 3vw;
+            margin-bottom: 3%;
         }
 
         #toggleProjects{
 
             .asleep, .active{
-                font-size: 1.75rem;
+                font-size: 1rem;
+                padding: 1% 3%;
             }
         }
         
@@ -260,6 +266,7 @@
     }
 
 
+    // CONTACT ------------------------------
     .contactPage{
         width: 50vw;
 
