--- a/src/styles/Tablet.scss
+++ b/src/styles/Tablet.scss
@@ -261,7 +261,7 @@
             justify-content: space-between;
             flex-wrap: wrap;
 
-            .designCard{
+            .designCard, .graphicCards{
                 width: 47%;
 
                 a{
