--- a/src/styles/Styles.scss
+++ b/src/styles/Styles.scss
@@ -511,7 +511,7 @@
                 width: 100%;
                 height: 20vh;
                 object-fit: cover;
-                filter: invert(75%);
+                // filter: invert(75%);
             }
 
             .cardInfo{
@@ -667,7 +667,7 @@
             height: 20vh;
             width: 100%;
             object-fit: cover;
-            filter: invert(75%);
+            // filter: invert(75%);
         }
 
         .designDetails{
