--- a/src/styles/Desktop.scss
+++ b/src/styles/Desktop.scss
@@ -213,7 +213,7 @@
     }
 
     .heading{
-        font-size: 4vw;
+        font-size: 3vw;
         // margin-bottom: 7.5%;
         margin: 0;
         h1{
@@ -286,6 +286,7 @@
         }
         .socials{
             font-size: 3rem;
+            padding-top: 5%;
         }
         .contactSub{
             font-size: 2vw; 
